4.0.7-SNAPSHOT Fix and refactored intravenous
Signed-off-by: sinri <e.joshua.s.e@gmail.com>