@@ -4,6 +4,7 @@ import io.github.sinri.keel.integration.mysql.statement.AbstractStatement;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static io.github.sinri.keel.facade.KeelInstance.Keel;
 
@@ -33,7 +34,7 @@ public class DropViewStatement extends AbstractStatement {
     [RESTRICT | CASCADE]
          */
         // RESTRICT and CASCADE, if given, are parsed and ignored.
-        List<String> list = viewNames.stream().map(x -> "`" + x + "`").toList();
+        List<String> list = viewNames.stream().map(x -> "`" + x + "`").collect(Collectors.toList());
         return "DROP VIEW "
                 + (ifExists ? "IF EXISTS" : "") + " "
                 + Keel.stringHelper().joinStringArray(list, ",");
